fix: swagger fix and build workerd exe file
