# docs/swagger.json
@@ -72,6 +72,12 @@
                         "description": "Show by limit",
                         "name": "limit",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Show by verse",
+                        "name": "verse",
+                        "in": "query"
                     }
                 ],
                 "responses": {
